--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ six = "^1.16.0"
 sqlparse = "^0.5.0"
 text-unidecode = "^1.3"
 validate-docbr = "^1.10.0"
+django-cors-headers = "^4.3.1"
 
 
 [build-system]
