--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ sqlparse = "^0.5.0"
 text-unidecode = "^1.3"
 validate-docbr = "^1.10.0"
 django-cors-headers = "^4.3.1"
+pillow = "^10.3.0"
 
 
 [build-system]
