--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ text-unidecode = "^1.3"
 validate-docbr = "^1.10.0"
 django-cors-headers = "^4.3.1"
 pillow = "^10.3.0"
+django-redis = "^5.4.0"
+redis = "^5.0.5"
+hiredis = "^2.3.2"
 
 
 [build-system]
