realizado testes na API

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django
+
+# Images for testing
+images_test/
