--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ django-redis = "^5.4.0"
 redis = "^5.0.5"
 hiredis = "^2.3.2"
 python-gettext = "^5.0"
+django-admin-honeypot = "^1.1.0"
 
 
 [build-system]
